# RustPractice

./: README.md
rustSample/: Cargo.toml
rustSample/src/: main.rs  trait.rs
