[package]
name = "rustSample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "0.2.21", features = ["macros"] }
async-std = { version="1.6.1", features = ["attributes"] }
async-traits = "0.0.0"
futures = "0.3.15"
